--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   cpplint:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v2
       - name: Install cpplint
@@ -16,6 +17,11 @@ jobs:
           wget https://raw.githubusercontent.com/google/styleguide/gh-pages/cpplint/cpplint.py
           sudo cp cpplint.py /usr/bin
           sudo chmod +x /usr/bin/cpplint.py
+
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '2.7'
+          architecture: 'x64'
 
       - name: Check code in /src
         run: find src/ -name "*.cc" -o -name "*.h"  | xargs cpplint.py
