--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
         run: find tests/ -name "*.cc" -o -name "*.h"  | xargs cpplint.py
 
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     needs: cpplint
     steps:
       - uses: actions/checkout@v2
