--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ if (NOT EXISTS "${CMAKE_BINARY_DIR}/conan.cmake")
     message(STATUS "Downloading conan.cmake from https://github.com/conan-io/cmake-conan")
     file(DOWNLOAD "https://raw.githubusercontent.com/conan-io/cmake-conan/v0.16.1/conan.cmake"
             "${CMAKE_BINARY_DIR}/conan.cmake"
-            EXPECTED_HASH SHA256=396e16d0f5eabdc6a14afddbcfff62a54a7ee75c6da23f32f7a31bc85db23484
+            EXPECTED_HASH SHA256=396e16d0f5 eabdc6a14afddbcfff62a54a7ee75c6da23f32f7a31bc85db23484
             TLS_VERIFY ON)
 endif ()
 
@@ -38,6 +38,16 @@ conan_basic_setup()
 
 include_directories(${CMAKE_SOURCE_DIR}/src)
 include_directories(${CMAKE_BINARY_DIR}/)
+
+include(FetchContent)
+
+FetchContent_Declare(
+        reduct_cpp
+        GIT_REPOSITORY https://github.com/reduct-storage/reduct-cpp.git
+        GIT_TAG main
+)
+
+FetchContent_MakeAvailable(reduct_cpp)
 
 add_subdirectory(src)
 
