--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,8 @@ jobs:
     needs: cpplint
     steps:
       - uses: actions/checkout@v2
+      - name: Cmake version
+        run: cmake --version
       - name: Install conan
         run: pip3 install conan
       - name: Build
@@ -40,7 +42,7 @@ jobs:
           mkdir build
           cd build
           cmake -DCMAKE_BUILD_TYPE=Debug ..
-          cmake --build .
+          cmake --build . -- -j 4
       - uses: actions/upload-artifact@master
         with:
           name: package
